compiler/tools/fpp-check/test/component/array_default_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/array_default_error.fpp: 2.29
  array A = [3] U32 default "abc"
                            ^
error: cannot convert string to array A
